--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,6 +1,5 @@
 name: Feature Request
 description: Suggest a new feature or enhancement
-title: "[FEATURE] "
 labels: ["enhancement"]
 body:
   - type: markdown
@@ -8,7 +7,9 @@ body:
       value: |
         ## Before opening a feature request
 
-        Please check if this feature has already been requested:
+        **Please write a descriptive title above** (e.g., "Add support for custom retry strategies")
+
+        Check if this feature has already been requested:
         - [Existing feature requests](https://github.com/NoeFabris/opencode-antigravity-auth/issues?q=is%3Aissue+label%3Aenhancement)
         - [Discussions](https://github.com/NoeFabris/opencode-antigravity-auth/discussions)
 
