--- a/.github/workflows/issue-triage.yml
+++ b/.github/workflows/issue-triage.yml
@@ -74,6 +74,9 @@ jobs:
         if: steps.check_labels.outputs.skip != 'true'
         run: |
           echo "Running Opencode Triage on issue ${{ steps.get_issue.outputs.number }}..."
+
+          # Move to the repository
+          cd /home/admin/coding/opencode-antigravity-auth
           
           # Run CLI with the agent config
           OUTPUT=$(opencode run --agent triage-bot "Triage issue ${{ steps.get_issue.outputs.number }}")
